# image_process

./: CMakeLists.txt  vcpkg.json
.github/workflows/: cmake-single-platform.yml
benchmark/: CMakeLists.txt  bm_image_find_sub.cpp  bm_image_gray_check.cpp  bm_image_resize.cpp
cmake/: image-process-config.cmake.in  image_process-config.cmake.in
include/image_process/: exporter.h  extract_channel.h  image_position.h  image_size.h  loader.h  resize.h  swizzle.h
include/image_process/bitmaps/: bitmap.h  bitmap_flat.h  bitmap_rgba.h  single_color_bitmap.h
include/image_process/check/: gray.h
include/image_process/draw/: rect_border.h  rect_fill.h
include/image_process/exporters/: exporter_factory.h  exporter_stb.h  exporter_stb_ico.h  exporter_webp.h
include/image_process/find/: find_same_image.h
include/image_process/loaders/: loader_set.h  loader_stb.h  loader_webp.h
include/image_process/transform/: drop_to_gray_scale.h
include/image_process/views/: color_view.h  pixel_view.h  pixel_view_clamp.h  pixel_view_dynamic.h  swizzle_view.h
src/: extract_channel.cpp  loader.cpp  resize.cpp  swizzle.cpp
src/bitmaps/: bitmap_flat.cpp
src/check/: gray.cpp
src/exporters/: exporter_factory.cpp  exporter_stb.cpp  exporter_stb_ico.cpp  exporter_webp.cpp
src/find/: find_same_image.cpp
src/loaders/: loader_stb.cpp  loader_webp.cpp
src/transform/: drop_to_gray_scale.cpp
src/views/: color_view.cpp
test/: CMakeLists.txt  find_sub_test.cpp  gray_check.cpp  test.cpp
